# veachron

./: Api.Dockerfile  Dockerfile  LICENSE  Ui.Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  readme.md
.github/workflows/: docker-push.yml  python-app.yml  python-push.yml  python-tests.yml
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: TimerListElement.tsx  TimerTable.tsx
frontend/src/shared/: Api.ts
src/: Dockerfile  requirements.txt
src/application/: timing.py
src/core/: timing.py
src/persistence/: __init__.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py
src/presentation/api/timings/: __init__.py  endpoints.py  models.py
src/presentation/docs/docs/: index.md
src/veachron/: Dockerfile  __main__.py  main.py
src/veachron/application/: timing.py
src/veachron/core/: constants.py
src/veachron/presentation/: __init__.py
src/veachron/presentation/api/: __init__.py
src/veachron/presentation/docs/: __init__.py
src/veachron/presentation/ui/: __init__.py
tests/test_application/: docker-compose-db.yaml  test_timing.py
veachron/: __main__.py  requirements.txt
veachron/application/: logging.py  timing.py
veachron/core/: constants.py  timing.py
veachron/persistence/: __init__.py  postgresql.py
veachron/persistence/postgresql/: __init__.py  initialization.py  shared.py  timer.py  timing.py
veachron/persistence/postgresql/commands/: create_timer_table.sql  create_timing_table.sql  (+2 more)
veachron/presentation/: __init__.py
(+6 files in other folders)
