[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veachron"
version = "0.0.1"
authors = [
  { name="Oliver Vea", email="oliver.vea@gmail.com" },
]
description = "A small example package"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/OliverVea/veachron"

[tool.pytest.ini_options]
pythonpath = "src"