[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veachron"
version = "2.0.0"
authors = [
  { name="Oliver Vea", email="oliver.vea@gmail.com" },
]
description = "Appication for tracking and displaying timings primarily for use inline in code."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/OliverVea/veachron"

[tool.pytest.ini_options]
pythonpath = "."